src/objects/SPE_ScorecardSPETemplateMap__c.object
<CustomObject>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Template</label>
        <referenceTo>SPE_SPETemplate__c</referenceTo>
        <relationshipLabel>Scorecard SPE Template Maps</relationshipLabel>
        <relationshipName>Scorecard_SPE_Template_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScorecardTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Template</label>
        <referenceTo>SPE_ScorecardTemplate__c</referenceTo>
        <relationshipLabel>Scorecard SPE Template Maps</relationshipLabel>
        <relationshipName>Scorecard_SPE_Template_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Scorecard SPE Template Map</label>
    <nameField>
        <displayFormat>SST-{00000}</displayFormat>
        <label>Scorecard SPE Template Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard SPE Template Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>